Fix macros hex input font size and name/file column spacing
- Hex color input: added font-size inherit for normal text size
- Increased margin-left on col-file from 16px to 20px for name/file separation
- Updated header to match

--- a/src/stylus/view-macros.styl
+++ b/src/stylus/view-macros.styl
@@ -164,7 +164,7 @@
       flex 1
       text-align center
       min-width 0
-      margin-left 16px
+      margin-left 20px
 
     .col-actions
       width 52px
@@ -250,6 +250,7 @@
         padding 0.3em 0.4em
         border 1px solid #ccc
         border-radius 3px
+        font-size inherit
 
     .col-name
       width 130px
@@ -265,7 +266,7 @@
     .col-file
       flex 1
       min-width 0
-      margin-left 16px
+      margin-left 20px
       display flex
       align-items center
 
